--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="background">
+        <video id="bgVideo" loop muted></video>
         <img id="bgImage"/>
     </div>
 
@@ -21,9 +22,7 @@
     <div id="loadingBar">
         <div id="loadingProgress"></div>
     </div>
-    <!-- NEU: Prozentanzeige im Kreis -->
     <div id="progressPercent">0%</div>
-    <!-- /NEU -->
     <p id="musicHint">Press SPACE, to start or stop the music.</p>
 </div>   
 
@@ -34,4 +33,3 @@
 </body>
  
 </html>
-
